# fruitfacts

./: .env.example  .gitignore  README.md  code_only_update.sh  data_and_code_update.sh  deploy.sh  download_files.sh  dvc_add.bat  full_update.sh  help wanted.md  thumbnail_update.bat  update_all.sh  update_code_only.sh
.dvc/: config
.github/workflows/: backend_test.yml  frontend_test.yml
backend/: .env.debug  .env.example  .env.release  .gitconfig  .gitignore  Cargo.toml  README.md  build.rs  reload_references.bat  rust_update.bat  start_server.sh
backend/.cargo/: config.toml
backend/migrations/2021-09-05-032727_initial/: down.sql  up.sql
backend/src/: auth.rs  gazetteer_load.rs  import_db.rs  lib.rs  main.rs  queries.rs  schema_generated.rs  schema_types.rs  session.rs  test.rs
backend/src/gazetteer_load/: README.md  download.sh  test_data_file.txt.demo
backend/src/import_db/: generated.rs  notoriety.rs  test.rs  types_generated.rs  util.rs
backend/src/queries/: auth.rs  list.rs  map.rs  search.rs  test.rs  util.rs
backend/web_screenshot/: .gitignore  README.md  index.js  package.json
frontend/: .env  .env.development  .env.local  .env.production  .eslintrc.cjs  .gitignore  .prettierrc  README.md  next.config.js  node_update.bat  package.json  prebuild.js  svelte.config.js  tailwind.config.js
frontend/components/: Link.js  button.js  buttonLink.js  confirmModal.js  createEmotionCache.js  errorbar.js  functions.js  getTypes.js  itemList.js  layout.js  navbar.js  navbarLogin.js  navbarSearch.js  theme.js  util.js
frontend/components/chart/: constants.js  index.js  util.js
frontend/components/map/: index.js  util.js
frontend/pages/: 404.js  _app.js  _document.js  createAccount.js  index.js  lists.js  login.js  search.js  user.js
frontend/pages/collections/: [...path].js
frontend/pages/dirs/: [...path].js  [[...path]].js
frontend/pages/lists/: addList.js  addPlant.js  lists.js
frontend/pages/patents/: [page].js  index.js
frontend/pages/plants/: index.js
frontend/public/fruit_icons/: SVG_CREATION.md
frontend/src/: app.html
frontend/src/routes/: Header.svelte  index.svelte  store.ts
frontend/styles/: Button.module.css  Map.module.css  globals.css
frontend/test/: util.test.js
harvest-chart-server/: .env  .env.example  .gitignore  Cargo.toml  README.md  build.rs  database.sqlite3  diesel.toml
harvest-chart-server/.cargo/: config.toml
harvest-chart-server/migrations/2021-09-05-032727_base_plants/: down.sql  up.sql
harvest-chart-server/migrations/2021-09-05-032727_initial/: down.sql  up.sql
harvest-chart-server/src/: auth.rs  git_info.rs  import_db.rs  lib.rs  main.rs  queries.rs  schema.rs  schemaTypes.rs  schema_fts.rs  schema_generated.rs  schema_types.rs  session.rs  test.rs
harvest-chart-server/src/import_db/: notoriety.rs  test.rs  util.rs
harvest-chart-server/src/json_format/: main.rs
plant_database/: .prettierrc  Apple.json  Apricot.json  Asian Pear.json  Blueberry.json  Cherry.json  Euro Pear.json  Euro Plum.json  Japanese Plum.json  Jujube.json  LICENSE.txt  Oddball.json  Persimmon.json  Pluot.json  README.md  Sour Cherry.json  dvc.dvc  facts.json5  help_needed.md  types.json  types.json5  types.jsonc
plant_database/dvc/Oregon/: OSU EC 773 Growing Prunes.pdf.dvc  OSU EC 819 Growing Tree Fruits and Nuts in the Home Orchard.pdf.dvc
plant_database/plants/: Almond.jsonc  Apple.json  Apple.json5  Apple.jsonc  Apricot.json  Apricot.json5  Apricot.jsonc  Asian Pear.json  Asian Pear.json5  Blueberry.json  Blueberry.json5  Crabapple.json5  Euro Pear.json  Euro Pear.json5  Euro Plum.json  Euro Plum.json5  Fig.json5  Grapefruit.json5  Grapefruit.jsonc  Japanese Plum.json  Japanese Plum.json5  Jujube.json5  Mandarin.json5  Mandarin.jsonc  Muscadine.json  Muscadine.json5  Nectarine.json5  Nectarine.jsonc  Oddball.json  Oddball.json5  Oddball.jsonc  Orange.jsonc  Peach.json  Peach.json5  Peach.jsonc  Persimmon.json  Persimmon.json5  Plumcot.json5  Pluot.json  Pluot.json5  (+7 more)
plant_database/references/: Michael's Garden.json  Michael's Garden.json5  Michael's Garden.jsonc  OSU EC 1181.json  OSU EC 773.json  OSU PNW 656.json  OSU SB 582.json  WSU EB 0937.json  no_preview_image.jpg.dvc
plant_database/references/Alabama/: ANR 1046 Suggested Nectarine Varieties for Alabama.json5  ANR 1046 Suggested Nectarine Varieties for Alabama.pdf.dvc  ANR 53 F Selecting Adapted Varieties.json5  ANR 53 F Selecting Adapted Varieties.pdf.dvc  ANR 994 Suggested Peach Varieties for Alabama.json5  ANR 994 Suggested Peach Varieties for Alabama.pdf.dvc  AU Chestnuts.json5  AU Kiwifruit.json5  AU Kiwifruit.pdf.dvc  AU Plum Tables From Release Papers.json5  AU Plums.json5  Alabama Fruit Crops.jpg.dvc  Alabama Fruit Crops.json5  Performance of Peach Varieties in Alabama.jpg.dvc  Performance of Peach Varieties in Alabama.json5  Performance of Peach Varieties in Alabama.pdf.dvc  Plum Variety Trials in Alabama 1986-1995.json5  Plum Variety Trials in Alabama 1986-1995.pdf.dvc
plant_database/references/Arizona/: Growing Grapes in the Home Garden.jpg.dvc  Growing Grapes in the Home Garden.json5  Growing Grapes in the Home Garden.pdf.dvc
plant_database/references/Arkansas/: Arkansas Blueberries.jpg.dvc  Arkansas Blueberries.json5  Arkansas Peaches and Nectarines.json5  Arkansas Table Grape Cultivars.jpg.dvc  Arkansas Table Grape Cultivars.json5  Arkansas Wine Grapes.jpg.dvc  Arkansas Wine Grapes.json5  Blackberry Production in the Home Garden.jpg.dvc  (+10 more)
server_admin/: FIREWALL.md  README.md  code_update.sh  create_www-data_user.sh  data_and_code_update.sh  database_update.sh  get_rust.sh  get_ubuntu_dependencies.sh  set_folder_permissions_for_www-data.sh  update_code.sh  update_website.sh
server_admin/letsencrypt/: 0_copy_nginx_base_files.sh  0_nginx_setup.sh  1_get_cert.sh  2_add_ssl_to_nginx.sh  2_certbot_add_ssl_to_nginx_files.sh  fruitfacts_backend  nginx_setup.sh
server_admin/service_files/: backend_fruitfacts.service  frontend_fruitfacts.service  fruitfacts_backend.service  fruitfacts_frontend.service  install.sh
(+725 files in other folders)
