[package]
name = "harvest-chart-server"
default-run = "harvest-chart-server"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "=2.0.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "=2.0.0"

# this has to be within the allowed versions for diesel-rs - note we're on the 2.0.x branch (latest stable)
# see https://github.com/diesel-rs/diesel/blob/2.0.x/diesel/Cargo.toml#L19
libsqlite3-sys = { version = "=0.25.2", features = ["bundled"] }

actix-cors = "=0.6.4"
actix-web = "=4.3.0"
anyhow = "=1.0.69"
base64 = "=0.21.0"
chrono = "=0.4.23"
clap = {version = "=4.1.6", features = ["cargo"] }
dotenv-build = "=0.1.1"
env_logger = "=0.10.0"
expiring_map = { git = "https://github.com/larsonmpdx/expiring_map/", branch = "remove_item" }
git2 = "=0.16.1"
indexmap = "=1.9.2"
itertools = "=0.10.5"
json5 = "=0.4.1"
lazy_static = "=1.4.0"
more-asserts = "=0.3"
oauth2 = "=4.3.0"
once_cell = "=1.17.1"
pathdiff = "=0.2.1"
rand = "=0.8.5"
regex = "=1.7.1"
reqwest = "=0.11.14"
serde = {version = "=1.0.152", features = ["derive"] }
serde_derive = "=1.0.152"
serde_json = "=1.0.93"
serde_with = "=2.2.0"
urlencoding = "=2.1.2"
walkdir = "=2.3.2"

# dependencies only used by support binaries (I don't want to download and build these when doing a server release)
pdfium-render = { version = "=0.7.29", optional = true }
image = { version = "=0.24.5", optional = true }

[features]
default = ["binaries"]
binaries = ["dep:pdfium-render", "dep:image"]

[build-dependencies]
dotenv-build = "=0.1.1"
