[package]
name = "harvest-chart-server"
default-run = "harvest-chart-server"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "=2.0.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "=2.0.0"

# this has to be within the allowed versions for diesel-rs - note we're on the 2.0.x branch (latest stable)
# see https://github.com/diesel-rs/diesel/blob/2.0.x/diesel/Cargo.toml#L19
# see versions here https://crates.io/crates/libsqlite3-sys/versions
libsqlite3-sys = { version = "=0.26.0", features = ["bundled"] }

actix-cors = "=0.6.4"
actix-web = "=4.3.1"
anyhow = "=1.0.70"
base64 = "=0.21.0"
chrono = "=0.4.24"
clap = { version = "=4.2.4", features = ["cargo"] }
dotenv-build = "=0.1.1"
env_logger = "=0.10.0"
expiring_map = { git = "https://github.com/larsonmpdx/expiring_map/", branch = "remove_item" }
git2 = "=0.17.1"
indexmap = "=1.9.3"
itertools = "=0.10.5"
json5 = "=0.4.1"
lazy_static = "=1.4.0"
more-asserts = "=0.3.1"
oauth2 = "=4.3.0"
once_cell = "=1.17.1"
pathdiff = "=0.2.1"
rand = "=0.8.5"
regex = "=1.7.3"
reqwest = "=0.11.16"
serde = { version = "=1.0.160", features = ["derive"] }
serde_derive = "=1.0.160"
serde_json = "=1.0.96"
serde_with = "=2.3.2"
urlencoding = "=2.1.2"
walkdir = "=2.3.3"

# dependencies only used by support binaries (I don't want to download and build these when doing a server release)
pdfium-render = { version = "=0.8.1", optional = true }
image = { version = "=0.24.6", optional = true }

[features]
default = ["binaries"]
binaries = ["dep:pdfium-render", "dep:image"]

[build-dependencies]
dotenv-build = "=0.1.1"
