[package]
name = "harvest-chart-server"
default-run = "harvest-chart-server"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "=2.1.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "=2.1.0"

# this has to be within the allowed versions for diesel-rs - note we're on the 2.0.x branch (latest stable)
# see https://github.com/diesel-rs/diesel/blob/2.0.x/diesel/Cargo.toml#L19
# see versions here https://crates.io/crates/libsqlite3-sys/versions
libsqlite3-sys = { version = "=0.26.0", features = ["bundled"] }

actix-cors = "=0.6.4"
actix-web = "=4.3.1"
anyhow = "=1.0.75"
base64 = "=0.21.2"
chrono = "=0.4.26"
clap = { version = "=4.3.23", features = ["cargo"] }
dotenv-build = "=0.1.1"
env_logger = "=0.10.0"
expiring_map = { git = "https://github.com/larsonmpdx/expiring_map/", branch = "remove_item" }
git2 = "=0.17.2"
indexmap = "=2.0.0"
itertools = "=0.11.0"
json5 = "=0.4.1"
lazy_static = "=1.4.0"
more-asserts = "=0.3.1"
oauth2 = "=4.4.1"
once_cell = "=1.18.0"
pathdiff = "=0.2.1"
rand = "=0.8.5"
regex = "=1.9.3"
reqwest = "=0.11.18"
serde = { version = "=1.0.183", features = ["derive"] }
serde_derive = "=1.0.183"
serde_json = "=1.0.105"
serde_with = "=3.3.0"
urlencoding = "=2.1.3"
walkdir = "=2.3.3"

# dependencies only used by support binaries (I don't want to download and build these when doing a server release)
pdfium-render = { version = "=0.8.8", optional = true }
image = { version = "=0.24.7", optional = true }

[features]
default = ["binaries"]
binaries = ["dep:pdfium-render", "dep:image"]

[build-dependencies]
dotenv-build = "=0.1.1"
