[package]
name = "harvest-chart-server"
default-run = "harvest-chart-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
json5 = "0.4.1"
clap = "2.33.3"
chrono = "0.4"
more-asserts = "0.2"
regex = "1.5.4"
walkdir = "2"
lazy_static = "1.4.0"
itertools = "0.10.1"
dotenv = "0.15"
json5format = "0.2.0"

[[bin]]
name = "json-format"
path = "src/json_format/main.rs"
