[package]
name = "harvest-chart-server"
default-run = "harvest-chart-server"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
actix-session = "0.4.1"
diesel = { version = "1.4.7", features = ["sqlite", "r2d2"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
diesel_migrations = "1.4"
serde = {version = "1.0", features = ["derive"] }
serde_with = "1.9.1"
serde_json = "1.0"
serde_derive = "1.0"
json5 = "0.4.1"
clap = "2.33.3"
chrono = "0.4"
more-asserts = "0.2"
regex = "1.5.4"
walkdir = "2"
lazy_static = "1.4.0"
itertools = "0.10.1"
dotenv = "0.15"
git2 = "0.13.24"
pathdiff = "0.2.0"
anyhow = "1.0.51"
oauth2 = "4.1.0"
rand = "0.8.4"
expiring_map = "0.1.0"
once_cell = "0.2.2"
base64 = "0.13.0"
reqwest = "0.11.7"
